name:                hadoop-streaming
version:             0.1.0.0
synopsis:            Helper utilities for working with Hadoop streaming
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Ozgun Ataman
maintainer:          ozgun.ataman@soostone.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     
    Hadoop.Streaming
    Hadoop.Streaming.Join

  -- other-modules:       
  build-depends:       
     base >= 4.5,
     lens, 
     mtl,
     attoparsec,
     base64-bytestring,
     bytestring,
     conduit >= 1.0,
     conduit-utils,
     attoparsec-conduit >= 1.0,
     containers,
     cereal,
     vector,
     unordered-containers,
     data-default,
     optparse-applicative,
     safe
  hs-source-dirs:      src
  default-language:    Haskell2010


