name:                hadoop-streaming
version:             0.1.0.0
synopsis:            Use Haskell programs for Hadoop processing
license:             BSD3
license-file:        LICENSE
author:              Ozgun Ataman
maintainer:          ozgun.ataman@soostone.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     
    Hadoop.Streaming
    Hadoop.Streaming.Join
    Hadoop.Streaming.Hadoop
    Hadoop.Streaming.Controller
    Hadoop.Streaming.Logger

  build-depends:       
     base >= 4.5,
     lens, 
     mtl,
     attoparsec,
     base64-bytestring,
     bytestring,
     conduit >= 1.0,
     conduit-utils,
     attoparsec-conduit >= 1.0,
     containers,
     cereal,
     vector,
     unordered-containers,
     data-default,
     optparse-applicative,
     safe,
     process,
     errors,
     operational,
     monad-logger,
     fast-logger,
     unix,
     template-haskell,
     text

  hs-source-dirs:      src
  default-language:    Haskell2010


