name:                hadron
version:             0.5
description:         Use Haskell to create Hadoop MapReduce programs
synopsis:            Use Haskell to create Hadoop MapReduce programs
license:             BSD3
license-file:        LICENSE
author:              Ozgun Ataman, Doug Beardsley
maintainer:          ozgun.ataman@soostone.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

Flag Examples
  Description: Build examples
  Default: False

library
  hs-source-dirs:      src

  exposed-modules:     
    Hadron.Basic
    Hadron.Controller
    Hadron.Join
    Hadron.Logger
    Hadron.Protocol
    Hadron.Run
    Hadron.Run.Hadoop
    Hadron.Run.Local
    Hadron.Streams
    Hadron.Streams.Bounded
    Hadron.Types

  build-depends:       
                       
     BoundedChan                  >= 1.0 && < 1.2,
     async                        >= 2.0 && < 2.1,
     attoparsec                   >= 0.11 && < 0.13,
     attoparsec-conduit           >= 1.0 && < 1.2,
     base                         >= 4.5 && < 5,
     base64-bytestring            >= 1 && < 1.1,
     blaze-builder                >= 0.3 && < 0.4,
     blaze-builder-conduit        >= 1.1 && < 1.2,
     bytestring                   >= 0.10 && < 0.11,
     cereal                       >= 0.4 && < 0.5,
     conduit                      >= 1.0 && < 1.3,
     conduit-extra                >= 1.1 && < 1.2,
     containers                   >= 0.5 && < 0.6,
     csv-conduit                  >= 0.5.1 && < 0.7,
     data-default                 >= 0.4 && < 0.6,
     directory                    >= 1 && < 1.3,
     errors                       >= 1.3 && < 1.5,
     exceptions                   >= 0.5 && < 0.7,
     filepath                     >= 1 && < 1.4,
     hashable                     >= 1.1 && < 1.3,
     hslogger                     >= 1.2 && < 1.3,
     io-streams                   >= 1.2 && < 1.3,
     lcs,
     lens                         >= 4.0 && < 4.5, 
     mmorph,
     mtl,
     old-locale,
     operational,
     optparse-applicative,
     parsec                       >= 3.1.5 && < 3.2,
     primitive,
     process,
     resourcet,
     retry                        >= 0.5.1 && < 0.6,
     rng-utils,
     safe,
     safecopy                     >= 0.8 && < 0.9,
     stringsearch,
     template-haskell,
     text,
     time,
     transformers-base,
     unix,
     unix-time,                    
     unordered-containers,
     vector,
     zlib-conduit

  ghc-options:         -Wall -O2 
                       -fwarn-tabs
                       -fno-warn-unused-do-bind
  default-language:    Haskell2010
  ghc-prof-options:    -fprof-auto -fprof-cafs -fprof-auto-calls
  

executable local-example

  if !flag(Examples)
    Buildable: False
  else
    Buildable: True

  main-is: WordCountLocal.hs
  hs-source-dirs: examples
  default-language:  Haskell2010

  Build-depends:
      base >= 4 && < 5
    , bytestring
    , csv-conduit
    , hadron
    , io-streams
    , lens
    , data-default



test-suite test
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  ghc-options: -Wall -threaded -rtsopts -O0
  hs-source-dirs: test

  Build-depends:
      base
    , hadron
    , vector
    , bytestring
    , unordered-containers
    , lens
    , time
    , HUnit
    , QuickCheck
    , test-framework
    , test-framework-hunit
    , test-framework-quickcheck2
    , derive


  default-language:    Haskell2010





