name:                hadron
version:             0.6
description:         Use Haskell to create Hadoop MapReduce programs
synopsis:            Use Haskell to create Hadoop MapReduce programs
license:             BSD3
license-file:        LICENSE
author:              Ozgun Ataman, Doug Beardsley
maintainer:          ozgun.ataman@soostone.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  README.md
  changelog.md
  examples/LineCount.hs
  examples/WordCountAuto.hs
  examples/WordCount.hs
  examples/WordCountLocal.hs
  test/Tests.hs


flag lib-Werror
  default: False
  manual: True

library
  hs-source-dirs:      src

  exposed-modules:
    Hadron.Basic
    Hadron.Conduit
    Hadron.Controller
    Hadron.Join
    Hadron.Logger
    Hadron.Protocol
    Hadron.Run
    Hadron.Run.FanOut
    Hadron.Run.Hadoop
    Hadron.Run.Local
    Hadron.Types
    Hadron.Utils

  build-depends:
    BoundedChan                       >= 1.0    && < 1.1,
    Glob                              >= 0.7    && < 0.10,
    array                             >= 0.5    && < 0.6,
    async                             >= 2.0    && < 2.2,
    attoparsec                        >= 0.11   && < 0.14,
    base                              >= 4.5    && < 4.10,
    base16-bytestring                 >= 0.1    && < 0.2,
    base64-bytestring                 >= 1.0    && < 1.1,
    blaze-builder                     >= 0.3    && < 0.5,
    bytestring                        >= 0.10   && < 0.11,
    cereal                            >= 0.4    && < 0.6,
    conduit                           >= 1.0    && < 1.3,
    conduit-extra                     >= 1.1    && < 1.2,
    containers                        >= 0.5    && < 0.6,
    cryptohash                        >= 0.11   && < 0.12,
    csv-conduit                       >= 0.5.1  && < 0.7,
    data-default                      >= 0.4    && < 0.8,
    directory                         >= 1.0    && < 1.4,
    errors                            >= 2.2    && < 2.3,
    exceptions                        >= 0.5    && < 0.9,
    filepath                          >= 1.0    && < 1.5,
    hashable                          >= 1.1    && < 1.3,
    hostname                          >= 1.0    && < 1.1,
    hslogger                          >= 1.2    && < 1.3,
    katip                             >= 0.5    && < 0.6,
    lens                              >= 4.0    && < 4.16,
    mmorph                            >= 1.1.0  && < 1.2,
    mtl                               >= 2.2.1  && < 2.3,
    operational                       >= 0.2.3  && < 0.3,
    optparse-applicative              >= 0.14.0 && < 0.15,
    parsec                            >= 3.1.5  && < 3.2,
    primitive                         >= 0.6.2  && < 0.7,
    process                           >= 1.4.3  && < 1.5,
    random                            >= 1.0    && < 1.2,
    resourcet                         >= 1.1.9  && < 1.2,
    retry                             >= 0.7    && < 0.8,
    safe                              >= 0.3.15 && < 0.4,
    safecopy                          >= 0.8    && < 0.10,
    split                             >= 0.2.3  && < 0.3,
    string-conv                       >= 0.1    && < 0.2,
    stringsearch                      >= 0.3.6  && < 0.4,
    template-haskell                  >= 2.11.1 && < 2.12,
    text                              >= 1.2.2  && < 1.3,
    time                              >= 1.6.0  && < 1.7,
    time-locale-compat                >= 0.1.1  && < 0.2,
    transformers                      >= 0.5.2  && < 0.6,
    transformers-base                 >= 0.4.4  && < 0.5,
    unix                              >= 2.7.2  && < 2.8,
    unix-time                         >= 0.3.7  && < 0.4,
    unordered-containers              >= 0.2.8  && < 0.3,
    vector                            >= 0.12.0 && < 0.13

  if flag(lib-Werror)
    ghc-options: -Werror

  ghc-options:         -Wall -O2
                       -fwarn-tabs
                       -fno-warn-unused-do-bind
  default-language:    Haskell2010
  ghc-prof-options:    -fprof-auto -fprof-cafs -fprof-auto-calls


test-suite test
  type: exitcode-stdio-1.0
  main-is: Tests.hs

  if flag(lib-Werror)
    ghc-options: -Werror

  ghc-options: -Wall -threaded -rtsopts -O0
  hs-source-dirs: test

  Build-depends: base
               , hadron
               , vector
               , bytestring
               , unordered-containers
               , lens
               , time
               , HUnit
               , QuickCheck
               , test-framework
               , test-framework-hunit
               , test-framework-quickcheck2
               , derive


  default-language:    Haskell2010
